--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/tank-of-america
     username: root
-    password: tdd-cd
+    password: clean-code
   jpa:
       show-sql: false
